<resources>

    <string name="app_name">Testing</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title">FriendTracker</string>
    <string name="num">Your total is 0</string>
    <string name="add">Add One</string>
    <string name="sub">Subtract One</string>
    <string name="usr">Username</string>
    <string name="submit">Login</string>
    <string name="inv">invalid</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="pick">Pick Contact for Badge</string>
    <string name="complete">Registration Complete</string>

</resources>