<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <EditText
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:id="@+id/etUsername" android:hint="@string/usr"
    android:inputType="textPersonName"
	/>
    <EditText
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:id="@+id/etPassword" android:hint="@string/pass"
    android:inputType="textPassword"
	/>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    
    <Button
        android:id="@+id/bRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>